--- a/src/styles/myskills.module.css
+++ b/src/styles/myskills.module.css
@@ -8,7 +8,8 @@
     display: flex;
     animation: scroll 30s linear infinite;
     -webkit-animation: scroll 30s linear infinite;
-    width: calc(200px * 14);
+    width: calc(200px * 28);
+    overflow: hidden;
 }
 
 .slider .slide{
