--- a/src/styles/proyects.module.css
+++ b/src/styles/proyects.module.css
@@ -35,3 +35,27 @@
     border-radius: 15;
     object-fit: cover;
 }
+
+
+.scrollableContent {
+    height: 300px;
+    overflow: auto;
+  }
+  
+  .scrollableContent::-webkit-scrollbar {
+    background-color: transparent;
+  }
+
+  .itemsContent{
+    height: 50px;
+    width: 70%;
+    text-align: center;
+    justify-items: center;
+    align-content: center;
+  }
+
+  .itemsContent:hover{
+    background-color: rgba(255, 255, 255, 0.3)
+  }
+
+
