--- a/src/components/timeline/styles/container.css
+++ b/src/components/timeline/styles/container.css
@@ -1,5 +1,5 @@
 .conatiner{
-    background-color: black;
+    background-color: rgba(0,0,0, 0.2);
     height: 100px;
     width: 100%;
     border-radius: 10px
